--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
 		"strophe.js": "1.3.2",
 		"strophejs-plugin-ping": "0.0.3",
 		"strophejs-plugin-rsm": "0.0.2",
+		"tooltipster": "^4.2.6",
 		"twemoji": "^11.0.1"
 	}
 }
