--- a/package.json
+++ b/package.json
@@ -104,5 +104,7 @@
     "webpack-cli": "^3.1.2",
     "xss": "^0.3.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "detectrtc": "^1.3.9"
+  }
 }
